Moved .multicolumn div out of universal styling

--- a/style_index.css
+++ b/style_index.css
@@ -9,6 +9,9 @@ section {
     column-count: 2;
     align-items: center;
 }
+.multicolumn div {
+    margin: 25px;
+}
 
 /* Socials */
 .socials ul {
