--- a/style_index.css
+++ b/style_index.css
@@ -3,6 +3,9 @@ section {
     border-bottom: 1px solid #ccc;
     padding: 15px 0 25px 0;
 }
+h2 {
+    text-align: center;
+}
 
 /* Intro */
 .intro .multicolumn {
