--- a/style_index.css
+++ b/style_index.css
@@ -6,14 +6,22 @@ section {
 h2 {
     text-align: center;
 }
+.multicolumn div {
+    margin: 5%;
+}
 
 /* Intro */
 .intro .multicolumn {
-    column-count: 2;
     align-items: center;
 }
-.multicolumn div {
-    margin: 25px;
+.intro .multicolumn div {
+    max-width: 500px;
+}
+.intro .fleximg {
+    width: 100%;
+    min-width: 50px;
+    max-width: 200px;
+    height: auto;
 }
 
 /* Socials */
@@ -40,9 +48,7 @@ h2 {
 
 /* Projects */
 .projects .multicolumn {
-    column-count: 3;
     padding: 0 5% 0 5%;
-    flex-wrap: wrap;
     align-items: flex-start;
 }
 .projects .multicolumn div {
