--- a/home_style.css
+++ b/home_style.css
@@ -1,23 +1,24 @@
 /* Sections */
-section {
-    border-bottom: 1px solid #ccc;
-    padding: 15px 0 25px 0;
+.home-section {
+    border-bottom: 1px solid var(--darkgray);
+    padding: 32px 0 32px 0;
 }
-h2 {
+.home-section h2 {
     text-align: center;
+    margin: 0 0 16px 0;
 }
 .multicolumn div {
     margin: 5%;
 }
 
 /* Intro */
-.intro .multicolumn {
+#intro .multicolumn {
     align-items: center;
 }
-.intro .multicolumn div {
+#intro .multicolumn div {
     max-width: 500px;
 }
-.intro .fleximg {
+#intro .fleximg {
     width: 100%;
     min-width: 50px;
     max-width: 200px;
@@ -25,40 +26,40 @@ h2 {
 }
 
 /* Socials */
-.socials ul {
+#socials ul {
     text-align: center;
-    background-color: #f2f2f2;
+    background-color: var(--gray);
     border-radius: 5px;
     padding: 10px 0 10px 0;
     width: 80%;
     margin: auto;
 }
-.socials li {
+#socials li {
     display: inline-block;
     margin-right: 10px;
 }
-.socials li::after {
+#socials li::after {
     content: "|";
     margin: 0 0 0 12px;
 }
-.socials li:last-child::after {
+#socials li:last-child::after {
     content: "";
     margin: 0;
 }
 
 /* Projects */
-.projects .multicolumn {
-    padding: 0 5% 0 5%;
+#projects .multicolumn {
+    padding: 0; /*0 5% 0 5%;*/
     align-items: flex-start;
 }
-.projects .multicolumn div {
-    background-color: #f2f2f2;
+#projects .multicolumn div {
+    background-color: var(--gray);
     border-radius: 5px;
     padding: 15px 20px 15px 12px;
 }
-.projects .multicolumn div p {
+#projects .multicolumn div p {
     margin: 0 0 5px 0;
 }
-.projects .multicolumn div ul {
+#projects .multicolumn div ul {
     margin: 0;
 }
