--- a/site_style.css
+++ b/site_style.css
@@ -39,6 +39,9 @@ a:visited {
     align-items: center;
     justify-content: center;
 }
+#titlecard h1 {
+    margin: 0;
+}
 
 main#home, main#cv {
     width: var(--main-width);
@@ -49,10 +52,13 @@ main#home, main#cv {
 #home section, #cv section {
     border-bottom: 1px solid var(--darkgray);
     padding: 32px 0 32px 0;
-    margin: 0 0 16px 0;
+    margin: 0;
 }
 #home section:last-of-type, #cv section:last-of-type {
     border-bottom: none;
+}
+#home section h2, #cv section  h2 {
+    margin: 0 0 16px 0;
 }
 
 #home .multicolumn, #cv .multicolumn {
