--- a/site_structure.css
+++ b/site_structure.css
@@ -25,7 +25,7 @@ div#site-header-container {
     margin: 0;
 }
 #site-header hr {
-    margin: 0;
+    margin: 0 0 4px 0;;
     border: 0;
     border-top: 4px solid var(--orange);
 }
