--- a/site_assets/site_style.css
+++ b/site_assets/site_style.css
@@ -29,6 +29,10 @@ h1, h2, h3, h4, h5, h6 {
 a {
     color: var(--green);
 }
+a:hover {
+    color: var(--green);
+}
+
 
 /* Home and CV */
 main#home, main#cv {
