--- a/site_assets/site_style.css
+++ b/site_assets/site_style.css
@@ -22,6 +22,7 @@ body {
     font-size: 16px;
     font-weight: 400;
     font-family: 'Nunito Sans', sans-serif;
+    color: var(--fontblack);
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Montserrat', sans-serif;
