--- a/assets/home/home_style.css
+++ b/assets/home/home_style.css
@@ -96,7 +96,8 @@ main section:last-of-type {
 }
 .explanation-card {
     position: absolute;
-    background-color: hsla(0, 0%, 97.5%, 0.9); /* Hard coded color! */
+    background-color: var(--lightgray);
+    filter: opacity(90%);
     padding: 1rem;
     z-index: 100;
     width: 250px;
