--- a/assets/home/home_style.css
+++ b/assets/home/home_style.css
@@ -1,4 +1,4 @@
-/* Multicolumn */
+/* Assets */
 .multicolumn {
     display: flex;
     flex-wrap: wrap;
@@ -7,12 +7,9 @@
 }
 
 
-/* Sections */
-main section h2 {
+/* Main: */
+main > section h2 {
     text-align: center;
-}
-main section:last-of-type {
-    border-bottom: none;
 }
 
 
@@ -89,12 +86,18 @@ main section:last-of-type {
 #projects .column-card > ul li:last-child {
     margin-bottom: 0;
 }
-
-/*
 #projects .column-card li a::after {
-    content: " 🛈";
-    color: var(--fontblack);
-}*/
+    content: " ";
+    margin: 0 0 0 4px;
+    width: 12px;
+    height: 12px;
+    display: inline-block;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50"><path d="M 25 2 C 12.309295 2 2 12.309295 2 25 C 2 37.690705 12.309295 48 25 48 C 37.690705 48 48 37.690705 48 25 C 48 12.309295 37.690705 2 25 2 z M 25 4 C 36.609824 4 46 13.390176 46 25 C 46 36.609824 36.609824 46 25 46 C 13.390176 46 4 36.609824 4 25 C 4 13.390176 13.390176 4 25 4 z M 25 11 A 3 3 0 0 0 22 14 A 3 3 0 0 0 25 17 A 3 3 0 0 0 28 14 A 3 3 0 0 0 25 11 z M 21 21 L 21 23 L 22 23 L 23 23 L 23 36 L 22 36 L 21 36 L 21 38 L 22 38 L 23 38 L 27 38 L 28 38 L 29 38 L 29 36 L 28 36 L 27 36 L 27 21 L 26 21 L 22 21 L 21 21 z"></path></svg>');
+    background-size:contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 .explanation-card {
     position: absolute;
     background-color: var(--lightgray);
@@ -117,15 +120,3 @@ main section:last-of-type {
     margin: 1rem 0 0 0;
     font-size: 0.9em;
 }
-#projects .column-card li a::after {
-    content: " ";
-    margin: 0 0 0 4px;
-    width: 12px;
-    height: 12px;
-    display: inline-block;
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50"><path d="M 25 2 C 12.309295 2 2 12.309295 2 25 C 2 37.690705 12.309295 48 25 48 C 37.690705 48 48 37.690705 48 25 C 48 12.309295 37.690705 2 25 2 z M 25 4 C 36.609824 4 46 13.390176 46 25 C 46 36.609824 36.609824 46 25 46 C 13.390176 46 4 36.609824 4 25 C 4 13.390176 13.390176 4 25 4 z M 25 11 A 3 3 0 0 0 22 14 A 3 3 0 0 0 25 17 A 3 3 0 0 0 28 14 A 3 3 0 0 0 25 11 z M 21 21 L 21 23 L 22 23 L 23 23 L 23 36 L 22 36 L 21 36 L 21 38 L 22 38 L 23 38 L 27 38 L 28 38 L 29 38 L 29 36 L 28 36 L 27 36 L 27 21 L 26 21 L 22 21 L 21 21 z"></path></svg>');
-    background-size:contain;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
