--- a/site_assets/site_style.css
+++ b/site_assets/site_style.css
@@ -72,6 +72,7 @@ a:hover, nav a:hover {
 #site-main.personal > section:last-of-type {
     border-bottom: none;
     padding-bottom: 0;
+    margin-bottom: 2rem;
 }
 
 #site-main.personal > #titlecard {
